--- a/tenta/.gitignore
+++ b/tenta/.gitignore
@@ -3,6 +3,35 @@
 .AppleDouble
 .LSOverride
 
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
+
+# Android/IntelliJ
+#
+android/.gradle
+android/build
+build/
+.idea
+.gradle
+*.iml
+
 # Other
 .buckconfig
 yarn.lock
